stopgap for contrast logos

--- a/app/assets/stylesheets/layout/layout.scss
+++ b/app/assets/stylesheets/layout/layout.scss
@@ -68,7 +68,7 @@ h2 {
 }
 
 header {
-	text-align: left;
+	text-align: center;
 	font-family: $font-header;
 	font-size: rem(55px);
 	position: relative;
@@ -89,6 +89,7 @@ header {
 
 		&--has-nav {
 			box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+			text-align: left;
 		}
 	}
 }
